2002-08-22  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.h (public): Added is_pos_invalid().
	* effects.cc:  Don't delete 'explode' if already off map.

2002-15-12  Aurelien Marchand  <artaxerxes@users.sf.net>

	* audio/Audio.cc: corrected cast error to prevent bus error on Zaurus

2002-08-12  Aurelien Marchand  <artaxerxes@users.sf.net>

	* shapes/fontgen.cc: prevent freetype if building for Zaurus.

2002-08-12  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.h,usecode/intrinsics.cc:  Always use bed that was
	double-clicked. 
	* schedule.cc:  Bug in getting tz.
	* usecode/conversation.cc:  Repaint when you pop_answers().

2002-08-11  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc (public): Explosion should explode the
	outermost container.

2002-08-09  Ryan Nunn  <triforce@merlin.net.au>
	* audio/midi_drivers/fmopl_midi.*, audio/midi_drivers/fmopldrv.cc,
	  gumps/AudioOptions_gump.cc : Fixing compiling issues
	* audio/midi_drivers/Makefile.am: Added fmopl files to the makefile,
	  but I'm not going to touch the configure script.

2002-08-07  Ryan Nunn  <triforce@merlin.net.au>
	* cheat_screen.cc : Added missing tqueue header.

	* exultmenu.cc, audio/Midi.cc, audio/xmidi.h, 
	  gumps/AudioOptions_gump.cc : Added 'Music Conversion' option to
	  enable the FM Synth. Requires a restart of Exult once it has been
	  set in order for it to work.

	* gamewin.cc : Removed screen offset test that wasn't meant to be
	  committed

	* msvcstuff/*.*, audio/midi_drivers/win_midiout.cc : Doing some tests
	  compiling Exult using UNICODE

	* files/*.* : Some initial changes for PocketPC support

2002-08-06  Ryan Nunn  <triforce@merlin.net.au>
	* midi_drivers/fmopl*.* : Emulatled FM Synth. Compiling in by defining
	  USE_FMOPL_MIDI. Makefiles will probably need updating. Has a 'dual'
	  mode for stereo sound. Use "config/audio/midi/dual_opl" set to "yes"
	  or "no" to enable/disable it. Default is "yes". BG support is 'work