@@ -113,6 +113,7 @@ static int Monster_food[] = {
 	811, 14,			// Rabbit - small leg.
 	970, 8,				// Sheep - mutton.
 	727, 23				// Horse - ribs.
+//	???, 11				// Pig - ham.
 	};
 
 /*
