@@ -1,3 +1,8 @@
+2002-08-23  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* usecode/ucsched.cc (Usecode_script): Don't purge script if it
+	has already started.
+
 2002-08-22  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/objs.h (public): Added is_pos_invalid().
